--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "convert-svg": "svgr -d public/static/svg-components public/static/svgs && eslint public/static/svg-components --fix",
     "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@material-ui/styles": "^4.11.4",
+    "@svgr/cli": "^5.5.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
