--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.11.4",
-    "@svgr/cli": "^5.5.0",
+    "@zeit/next-source-maps": "^0.0.3",
     "next": "10.2.3",
+    "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@svgr/cli": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "babel-eslint": "^10.0.0",
