feat: add apollo with next & add login demo for valid apollo success

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "~components/*": ["components/*"],
+      "~hooks/*": ["hooks/*"],
       "~static/*": ["static/*"],
       "~theme": ["theme/index"],
       "~i18n": ["i18n"],
