--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@material-ui/styles": "^4.11.4",
     "@zeit/next-source-maps": "^0.0.3",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.5.0",
+    "js-cookie": "^2.2.1",
     "next": "10.2.3",
     "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tldjs": "^2.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
