--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
+    "mobile-detect": "^1.4.5",
     "next": "10.2.3",
     "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
