--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "mobile-detect": "^1.4.5",
     "next": "10.2.3",
+    "next-i18next": "^8.5.0",
     "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
