--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/styles": "^4.11.4",
     "@zeit/next-source-maps": "^0.0.3",
     "apollo-boost": "^0.4.9",
+    "classnames": "^2.3.1",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
     "mobile-detect": "^1.4.5",
