--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/styles": "^4.11.4",
+    "@tippyjs/react": "^4.2.5",
     "@zeit/next-source-maps": "^0.0.3",
     "apollo-boost": "^0.4.9",
     "classnames": "^2.3.1",
