--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "10.2.3",
     "next-i18next": "^8.5.0",
     "next-with-apollo": "^5.1.1",
+    "rc-scroll-anim": "^2.7.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tldjs": "^2.3.1"
